# mcp-doc-rag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml  setup_config.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: quickstart.py
src/rag/: __init__.py  __main__.py  adapter.py  cli.py  config.example.yaml  config.py  context_builder.py  eval.py  gateway.example.yaml  models.py  server.py  source_manager.py  symbol_index.py
src/rag/daemon/: client.py  commands.py  config.py  http_server.py  process.py  runtime.py
src/rag/gateway/: codegraph_client.py  codegraph_lifecycle.py  config.py  doc_backend.py  mcp_protocol.py  server.py  service.py  tools.py
src/rag/indexer/: __init__.py  chunker.py  crawler.py  embedder.py  embedding_cache.py  orchestrator.py  parser_header.py  parser_html.py  parser_pdf.py  parser_registry.py
src/rag/retriever/: __init__.py  bm25_search.py  hybrid.py  query_rewriter.py  reranker.py  vector_search.py
tests/: __init__.py  conftest.py  test_01_config.py  test_02_source_manager.py  test_03_symbol_index.py  test_04_parser.py  test_05_chunker.py  test_06_context_builder.py  test_07_crawler.py  test_08_embedder.py  test_09_search.py  test_10_e2e.py  test_10_query_rewriter.py  test_11_e2e.py  test_12_llm_rewriter.py  test_13_eval_trace.py  test_14_gateway_config.py  test_15_gateway_tools.py  test_16_gateway_server.py  test_17_gateway_cli.py  test_18_gateway_lifecycle.py  test_19_pytest_config.py  test_20_gateway_service.py  test_21_gateway_mcp_protocol.py  test_22_daemon_config_runtime.py  test_23_daemon_http.py  test_24_daemon_client_process.py  test_25_adapter.py  test_26_setup_config_daemon.py  test_gateway_config.py  test_gateway_tools.py
tests/eval/: queries.template.jsonl  test_metrics.py
