[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "rag-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "ollama>=0.4",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "rank-bm25>=0.2",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "einops>=0.7",
    "transformers>=4.40",
    "torch>=2.0",
]

[project.scripts]
rag = "rag.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]
