[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "mcp-doc-rag"
version = "0.1.0"
description = "Fully-local RAG for C/C++ SDK docs — Doxygen-aware, MCP-native, hybrid BM25+vector search"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mcp-doc-rag Contributors"},
]
requires-python = ">=3.11"
keywords = [
    "rag",
    "doxygen",
    "cpp",
    "mcp",
    "model-context-protocol",
    "chromadb",
    "ollama",
    "documentation",
    "sdk",
    "retrieval-augmented-generation",
    "local",
    "offline",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "chromadb>=0.5",
    "ollama>=0.4",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "rank-bm25>=0.2",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "einops>=0.7",
    "transformers>=4.40",
    "torch>=2.0",
]

[project.scripts]
rag = "rag.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
header-ast = [
    "tree-sitter>=0.21",
    "tree-sitter-cpp>=0.23",
]

[project.urls]
Homepage = "https://github.com/Lang-sl/mcp-doc-rag"
Repository = "https://github.com/Lang-sl/mcp-doc-rag"
Issues = "https://github.com/Lang-sl/mcp-doc-rag/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
rag = [
    "py.typed",
    "config.example.yaml",
    "gateway.example.yaml",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]
